# jwst_psfmc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo_covariance_kernel.ipynb  demo_psf_photometry.ipynb
examples/PSF/: example1_f200w_PSF_4_c.fits  example2_f200w_PSF_4_c.fits
examples/data/: example1_f200w_cov_kernel.fits  example1_f200w_diff.fits  example1_f200w_diff_error.fits  example1_f200w_mask.fits  example2_f200w_cov_kernel.fits  example2_f200w_diff.fits  example2_f200w_diff_error.fits  example2_f200w_mask.fits  example3_f444w_diff.fits  example3_f444w_mask.fits
jwst_psfmc/: __init__.py  covariance.py  io.py  mcmc.py  plot.py  psf.py
tests/: __init__.py  test_covariance.py  test_psf.py
